Add tests for core actions, internal operations, and fix failing tests.